main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_security_group" "my_security_grp" {
  name= var.security_grp

 ingress {
  from_port = 8080
  to_port = 8080
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  }

ingress {
  from_port = 22
  to_port = 22
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  }

 egress {
  from_port = 0
  to_port = 65535
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  }

tags={
  name=var.security_grp
  }
}

resource"aws_instance" "my_first_instance"{
  ami = var.ami
